<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="#2567E8"
    tools:context=".LogininicialActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="206dp"
        android:layout_height="86dp"
        android:layout_marginBottom="34dp"
        android:text="@string/inicia_sesi_n_en_tu_cuenta"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FAF7F7"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cuadroBlanco3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/cuadroBlanco"
        android:layout_width="422dp"
        android:layout_height="494dp"
        android:layout_marginTop="424dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cuadroBlanco3"
        android:layout_width="310dp"
        android:layout_height="282dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/redondeado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:text="@string/iniciar_sesi_on"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#2567E8"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuadroBlanco3"
        app:layout_constraintVertical_bias="0.224" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="172dp"
        android:layout_height="56dp"
        android:text="@string/registrarse"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="#2567E8"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuadroBlanco3"
        app:layout_constraintVertical_bias="0.547" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="211dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/cuadroBlanco3"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3"
        app:layout_constraintTop_toTopOf="@+id/cuadroBlanco3"
        app:layout_constraintVertical_bias="0.185" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="210dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/cuadroBlanco3"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6"
        app:layout_constraintVertical_bias="0.253"
        android:hint="@string/contrase_a" />

    <Button
        android:id="@+id/button4"
        android:layout_width="187dp"
        android:layout_height="49dp"
        android:text="@string/olvide_mi_contrase_a"
        app:backgroundTint="#2567E8"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/cuadroBlanco3"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
</androidx.constraintlayout.widget.ConstraintLayout>
