<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="#2567E8"
    tools:context=".LogininicialActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="205dp"
        android:layout_height="49dp"
        android:layout_marginBottom="72dp"
        android:text="Registrate"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FAF7F7"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cuadroBlanco3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/cuadroBlanco"
        android:layout_width="422dp"
        android:layout_height="494dp"
        android:layout_marginTop="424dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cuadroBlanco3"
        android:layout_width="307dp"
        android:layout_height="410dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/redondeado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp"
        android:layout_width="172dp"
        android:layout_height="56dp"
        android:layout_marginBottom="128dp"
        android:text="@string/registrarse"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#2567E8"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuadroBlanco3"
        app:layout_constraintVertical_bias="0.625" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/cuadroBlanco3"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3"
        app:layout_constraintTop_toTopOf="@+id/cuadroBlanco3"
        app:layout_constraintVertical_bias="0.376" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/num"
        android:inputType="text"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/cuadroBlanco3"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3"
        app:layout_constraintTop_toTopOf="@+id/cuadroBlanco3"
        app:layout_constraintVertical_bias="0.753" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/cuadroBlanco3"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_marginTop="13dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.166" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="115dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toStartOf="@+id/editTextText4"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3"
        app:layout_constraintTop_toTopOf="@+id/cuadroBlanco3"
        app:layout_constraintVertical_bias="0.802" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="124dp"
        android:layout_height="56dp"
        android:autofillHints="" android:ems="10"
        android:inputType="text"
        android:hint="@string/apellidos"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3"
        app:layout_constraintTop_toTopOf="@+id/cuadroBlanco3"
        app:layout_constraintVertical_bias="0.818" />

</androidx.constraintlayout.widget.ConstraintLayout>
