<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="#2567E8"
    tools:context=".LogininicialActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="205dp"
        android:layout_height="95dp"
        android:layout_marginBottom="28dp"
        android:text="Recuperar Contraseña"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FAF7F7"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cuadroBlanco3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/cuadroBlanco"
        android:layout_width="422dp"
        android:layout_height="494dp"
        android:layout_marginTop="424dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cuadroBlanco3"
        android:layout_width="313dp"
        android:layout_height="367dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/redondeado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRecuperar"
        android:layout_width="172dp"
        android:layout_height="56dp"
        android:layout_marginBottom="48dp"
        android:text="Recuperar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#2567E8"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/cuadroBlanco3"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:layout_marginBottom="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnRecuperar"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="74dp"
        android:layout_marginBottom="35dp"
        android:text="@string/ingresa_la_informacion_requerida"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintEnd_toEndOf="@+id/cuadroBlanco3"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/cuadroBlanco3"
        app:layout_constraintTop_toTopOf="@+id/cuadroBlanco3"
        app:layout_constraintVertical_bias="0.902" />

</androidx.constraintlayout.widget.ConstraintLayout>
